--- a/src/airbooks/fxml/cart-tile-long.fxml
+++ b/src/airbooks/fxml/cart-tile-long.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" onMouseClicked="#selectAction" prefHeight="50.0" prefWidth="900.0" style="-fx-border-color: black; -fx-background-color: white;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.CartTileLongController">
+<VBox stylesheets="@../css/style.css" alignment="CENTER" onMouseClicked="#selectAction" prefHeight="50.0" prefWidth="900.0" style="-fx-border-color: black; -fx-background-color: white;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.CartTileLongController">
    <children>
       <Label fx:id="bookNameLabel" alignment="CENTER" text="Book1">
          <VBox.margin>
