--- a/src/airbooks/fxml/scs-tile.fxml
+++ b/src/airbooks/fxml/scs-tile.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="SCSVBox" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#selectAction" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: white; -fx-border-color: black;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.SCSTileController">
+<VBox fx:id="SCSVBox" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#selectAction" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: white; -fx-border-color: black;" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.SCSTileController">
    <children>
       <Label fx:id="scsNameLabel" text="NUS UTown">
          <VBox.margin>
