--- a/src/airbooks/fxml/student.fxml
+++ b/src/airbooks/fxml/student.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.StudentController">
+<BorderPane maxHeight="-Infinity" stylesheets="@../css/style.css" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.StudentController">
    <top>
       <GridPane style="-fx-background-color: lightcyan; -fx-border-width: 0 0 1 0; -fx-border-color: black;" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -73,7 +73,7 @@
                   <Font size="17.0" />
                </font>
             </Label>
-            <ScrollPane hbarPolicy="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="500.0" style="-fx-border-color: black; -fx-background: none;" vbarPolicy="NEVER">
+            <ScrollPane hbarPolicy="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="500.0" vbarPolicy="NEVER">
                <VBox.margin>
                   <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
@@ -117,7 +117,7 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="subjCB" prefWidth="100.0" style="-fx-border-color: black; -fx-background: none; -fx-font-size: 12;">
+                  <ComboBox fx:id="subjCB" prefWidth="100.0" style="-fx-border-color: black; -fx-background-color: none; -fx-font-size: 12;">
                      <VBox.margin>
                         <Insets bottom="5.0" top="3.0" />
                      </VBox.margin>
@@ -127,7 +127,7 @@
                         <Insets bottom="3.0" />
                      </VBox.margin>
                   </Button>
-                  <ScrollPane hbarPolicy="NEVER" maxHeight="-Infinity" prefHeight="500.0" style="-fx-background: none; -fx-border-color: black;" vbarPolicy="NEVER">
+                  <ScrollPane hbarPolicy="NEVER" maxHeight="-Infinity" prefHeight="500.0" vbarPolicy="NEVER">
                      <VBox.margin>
                         <Insets top="10.0" />
                      </VBox.margin>
