--- a/src/airbooks/css/style.css
+++ b/src/airbooks/css/style.css
@@ -8,12 +8,19 @@
 }
 
 .button {
-    -fx-background-color: lightgreen;
+    -fx-background-color: #b2ffb2;
     -fx-border-color: black;
     -fx-border-width: 1;
-    -fx-background-insets: 0;
+    -fx-border-radius: 5;
+    -fx-background-radius: 5;
 }
 
 .button:hover {
     -fx-background-color: white;
+}
+
+.combo-box {
+    -fx-border-color: black;
+    -fx-background-color: none;
+    -fx-font-size: 12;
 }
