--- a/src/airbooks/fxml/login.fxml
+++ b/src/airbooks/fxml/login.fxml
@@ -15,6 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.PasswordField?>
 <BorderPane maxHeight="-Infinity" stylesheets="@../css/style.css" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.LoginController">
    <top>
       <ImageView fitHeight="153.0" fitWidth="261.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
@@ -52,11 +53,11 @@
                         <Insets left="5.0" right="5.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField fx:id="passwordTF" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="210.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1">
+                  <PasswordField fx:id="passwordTF" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="210.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="5.0" right="5.0" />
                      </GridPane.margin>
-                  </TextField>
+                  </PasswordField>
                   <Label text="Username" GridPane.halignment="RIGHT">
                      <GridPane.margin>
                         <Insets left="5.0" right="5.0" />
