--- a/src/airbooks/css/style.css
+++ b/src/airbooks/css/style.css
@@ -24,3 +24,10 @@
     -fx-background-color: none;
     -fx-font-size: 12;
 }
+
+.copyable-label, .copyable-label:focused {
+    -fx-background-color: transparent;
+    -fx-background-insets: 0px;
+    -fx-font-family: 'Courier New';
+    -fx-font-size: 13;
+}
