--- a/src/airbooks/fxml/student.fxml
+++ b/src/airbooks/fxml/student.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" stylesheets="@../css/style.css" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.StudentController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: white;" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.StudentController">
    <top>
       <GridPane style="-fx-background-color: lightcyan; -fx-border-width: 0 0 1 0; -fx-border-color: black;" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -78,7 +78,7 @@
                   <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
                <content>
-                  <VBox fx:id="rentalCartVBox" prefWidth="300.0" style="-fx-background-color: white;" />
+                  <VBox fx:id="rentalCartVBox" alignment="TOP_CENTER" prefWidth="300.0" style="-fx-background-color: white;" />
                </content>
             </ScrollPane>
             <Label fx:id="cartInfoLabel" text="1 book, $14.00">
@@ -132,7 +132,7 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                      <content>
-                        <VBox fx:id="rentBooksVBox" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="900.0" />
+                        <VBox fx:id="rentBooksVBox" alignment="TOP_CENTER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="900.0" />
                      </content>
                   </ScrollPane>
                   <Button mnemonicParsing="false" onAction="#cartAction" text="Add to Cart">
