many changes - hyperlink styling - code formatting - error dialog improved - more info given about who rented a book - changed inner mechanics   - CartTileLongController: onDoubleClick is no longer static, set by init()   - CartTileController: onTrash added, triggers when item trashed

--- a/src/airbooks/css/style.css
+++ b/src/airbooks/css/style.css
@@ -13,10 +13,35 @@
     -fx-border-width: 1;
     -fx-border-radius: 5;
     -fx-background-radius: 5;
+    -fx-effect: none;
 }
 
 .button:hover {
     -fx-background-color: white;
+    -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.5), 5, 0, 0, 0);
+}
+
+.button:armed {
+    -fx-effect: none;
+}
+
+.hyperlink {
+    -fx-border-color: transparent;
+    -fx-padding: 4 0 4 0;
+}
+
+.hyperlink:hover, .hyperlink:visited:hover {
+    -fx-underline: true;
+}
+
+.hyperlink:visited {
+    -fx-text-fill: -fx-accent;
+    -fx-underline: false;
+}
+
+.hyperlink:armed {
+    -fx-text-fill: -fx-text-background-color;
+    -fx-underline: true;
 }
 
 .combo-box {
