--- a/src/airbooks/fxml/confirm-rent.fxml
+++ b/src/airbooks/fxml/confirm-rent.fxml
@@ -1,108 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="440.0" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.ConfirmRentController">
    <top>
-      <ImageView fitHeight="153.0" fitWidth="261.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
-         <image>
-            <Image url="@airbooks-logo.png" />
-         </image>
+      <ImageView fitHeight="153.0" fitWidth="261.0" pickOnBounds="true" preserveRatio="true"
+                 BorderPane.alignment="CENTER">
          <BorderPane.margin>
-            <Insets bottom="5.0" top="5.0" />
+            <Insets bottom="5.0" top="5.0"/>
          </BorderPane.margin>
+         <Image url="@airbooks-logo.png"/>
       </ImageView>
    </top>
    <center>
-      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: lightcyan; -fx-border-color: black; -fx-border-width: 1 0 1 0;">
-         <children>
-            <Label text="Thank you for using AirBooks!">
-               <font>
-                  <Font size="40.0" />
-               </font>
-               <VBox.margin>
-                  <Insets bottom="10.0" top="25.0" />
-               </VBox.margin>
-            </Label>
-            <Label text="Required information to collect your books">
-               <VBox.margin>
-                  <Insets bottom="5.0" />
-               </VBox.margin>
-            </Label>
-            <GridPane maxHeight="-Infinity" maxWidth="-Infinity">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
-                  <ColumnConstraints hgrow="NEVER" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <Label text="Password" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Locker Number" GridPane.halignment="RIGHT">
-                     <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Label text="Postal Code" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
-                     <GridPane.margin>
-                        <Insets left="10.0" right="10.0" />
-                     </GridPane.margin>
-                  </Label>
-                  <Pane style="-fx-border-color: black; -fx-border-width: 1 1 1 0;" GridPane.columnIndex="1" />
-                  <Pane style="-fx-border-color: black;" />
-                  <Pane style="-fx-border-color: black; -fx-border-width: 0 1 0 1;" GridPane.rowIndex="1" />
-                  <Pane style="-fx-border-color: black; -fx-border-width: 0 1 0 0;" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Pane style="-fx-border-color: black;" GridPane.rowIndex="2" />
-                  <Pane style="-fx-border-color: black; -fx-border-width: 1 1 1 0;" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <TextField fx:id="lockerNoLabel" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="80.0" styleClass="copyable-label" text="14" GridPane.columnIndex="1">
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </TextField>
-                  <TextField fx:id="passwordLabel" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="80.0" styleClass="copyable-label" text="abcdefgh" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </TextField>
-                  <TextField fx:id="postalCodeLabel" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="80.0" styleClass="copyable-label" text="122312" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </TextField>
-               </children>
-            </GridPane>
-         </children>
+      <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0"
+            style="-fx-background-color: lightcyan; -fx-border-color: black; -fx-border-width: 1 0 1 0;">
          <BorderPane.margin>
-            <Insets />
+            <Insets/>
          </BorderPane.margin>
+         <Label text="Thank you for using AirBooks!">
+            <font>
+               <Font size="40.0"/>
+            </font>
+            <VBox.margin>
+               <Insets bottom="10.0" top="25.0"/>
+            </VBox.margin>
+         </Label>
+         <Label text="Required information to collect your books">
+            <VBox.margin>
+               <Insets bottom="5.0"/>
+            </VBox.margin>
+         </Label>
+         <GridPane maxHeight="-Infinity" maxWidth="-Infinity">
+            <columnConstraints>
+               <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
+               <ColumnConstraints hgrow="NEVER"/>
+            </columnConstraints>
+            <rowConstraints>
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <Label text="Password" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0"/>
+               </GridPane.margin>
+            </Label>
+            <Label text="Locker Number" GridPane.halignment="RIGHT">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0"/>
+               </GridPane.margin>
+            </Label>
+            <Label text="Postal Code" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets left="10.0" right="10.0"/>
+               </GridPane.margin>
+            </Label>
+            <Pane style="-fx-border-color: black; -fx-border-width: 1 1 1 0;" GridPane.columnIndex="1"/>
+            <Pane style="-fx-border-color: black;"/>
+            <Pane style="-fx-border-color: black; -fx-border-width: 0 1 0 1;" GridPane.rowIndex="1"/>
+            <Pane style="-fx-border-color: black; -fx-border-width: 0 1 0 0;" GridPane.columnIndex="1"
+                  GridPane.rowIndex="1"/>
+            <Pane style="-fx-border-color: black;" GridPane.rowIndex="2"/>
+            <Pane style="-fx-border-color: black; -fx-border-width: 1 1 1 0;" GridPane.columnIndex="1"
+                  GridPane.rowIndex="2"/>
+            <TextField fx:id="lockerNoLabel" editable="false" maxHeight="-Infinity" maxWidth="-Infinity"
+                       minHeight="-Infinity" minWidth="-Infinity" prefWidth="80.0" styleClass="copyable-label"
+                       text="14" GridPane.columnIndex="1">
+               <GridPane.margin>
+                  <Insets/>
+               </GridPane.margin>
+            </TextField>
+            <TextField fx:id="passwordLabel" editable="false" maxHeight="-Infinity" maxWidth="-Infinity"
+                       minHeight="-Infinity" minWidth="-Infinity" prefWidth="80.0" styleClass="copyable-label"
+                       text="abcdefgh" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets/>
+               </GridPane.margin>
+            </TextField>
+            <TextField fx:id="postalCodeLabel" editable="false" maxHeight="-Infinity" maxWidth="-Infinity"
+                       minHeight="-Infinity" minWidth="-Infinity" prefWidth="80.0" styleClass="copyable-label"
+                       text="122312" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets/>
+               </GridPane.margin>
+            </TextField>
+         </GridPane>
       </VBox>
    </center>
    <bottom>
       <AnchorPane BorderPane.alignment="CENTER">
-         <children>
-            <Label text="© NUS High School of Math and Science" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="3.0" AnchorPane.topAnchor="2.0" />
-            <Hyperlink onAction="#aboutAction" text="About the Programmer..." AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="0.0" />
-         </children>
+         <Label text="© NUS High School of Math and Science" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="3.0"
+                AnchorPane.topAnchor="2.0"/>
+         <Hyperlink onAction="#aboutAction" text="About the Programmer..." AnchorPane.bottomAnchor="0.0"
+                    AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="0.0"/>
       </AnchorPane>
    </bottom>
 </BorderPane>
