--- a/src/airbooks/fxml/student.fxml
+++ b/src/airbooks/fxml/student.fxml
@@ -1,169 +1,131 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: white;" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.StudentController">
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: white;" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.StudentController">
    <top>
       <GridPane style="-fx-background-color: lightcyan; -fx-border-width: 0 0 1 0; -fx-border-color: black;" BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Label text="AirBooks">
-               <font>
-                  <Font size="36.0" />
-               </font>
-               <GridPane.margin>
-                  <Insets bottom="3.0" left="10.0" top="3.0" />
-               </GridPane.margin>
-            </Label>
-            <FlowPane alignment="CENTER_RIGHT" columnHalignment="RIGHT" GridPane.columnIndex="2">
-               <children>
-                  <Label fx:id="accNameLabel" alignment="CENTER_RIGHT" text="janjan">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Label>
-                  <ImageView fitHeight="35.0" fitWidth="100.0" onMouseClicked="#logoutAction" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@logout.png" />
-                     </image>
-                     <FlowPane.margin>
-                        <Insets left="5.0" />
-                     </FlowPane.margin>
-                  </ImageView>
-               </children>
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-            </FlowPane>
-            <Label fx:id="walletLabel" alignment="CENTER" text="\$25.00" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints vgrow="SOMETIMES" />
+         </rowConstraints>
+         <Label text="AirBooks">
+            <font>
+               <Font size="36.0" />
+            </font>
+            <GridPane.margin>
+               <Insets bottom="3.0" left="10.0" top="3.0" />
+            </GridPane.margin>
+         </Label>
+         <FlowPane alignment="CENTER_RIGHT" columnHalignment="RIGHT" GridPane.columnIndex="2">
+            <GridPane.margin>
+               <Insets right="10.0" />
+            </GridPane.margin>
+            <Label fx:id="accNameLabel" alignment="CENTER_RIGHT" text="janjan">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-         </children>
+            <ImageView fitHeight="35.0" fitWidth="100.0" onMouseClicked="#logoutAction" pickOnBounds="true" preserveRatio="true">
+               <FlowPane.margin>
+                  <Insets left="5.0" />
+               </FlowPane.margin>
+               <Image url="@logout.png" />
+            </ImageView>
+         </FlowPane>
+         <Label fx:id="walletLabel" alignment="CENTER" text="\$25.00" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <font>
+               <Font size="18.0" />
+            </font>
+         </Label>
       </GridPane>
    </top>
    <left>
       <VBox alignment="CENTER" fillWidth="false" style="-fx-border-color: black; -fx-border-width: 0 1 0 0; -fx-background-color: oldlace;" BorderPane.alignment="CENTER">
-         <children>
-            <Label text="Your Rental Cart">
-               <font>
-                  <Font size="17.0" />
-               </font>
-            </Label>
-            <ScrollPane hbarPolicy="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="500.0" vbarPolicy="NEVER">
-               <VBox.margin>
-                  <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
-               </VBox.margin>
-               <content>
-                  <VBox fx:id="rentalCartVBox" alignment="TOP_CENTER" prefWidth="300.0" style="-fx-background-color: white;" />
-               </content>
-            </ScrollPane>
-            <Label fx:id="cartInfoLabel" text="1 book, $14.00">
-               <VBox.margin>
-                  <Insets bottom="2.0" />
-               </VBox.margin>
-            </Label>
-            <Button mnemonicParsing="false" onAction="#checkoutAction" text="Checkout" />
-         </children>
+         <Label text="Your Rental Cart">
+            <font>
+               <Font size="17.0" />
+            </font>
+         </Label>
+         <ScrollPane hbarPolicy="NEVER" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="500.0" vbarPolicy="NEVER">
+            <VBox.margin>
+               <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+            </VBox.margin>
+            <VBox fx:id="rentalCartVBox" alignment="TOP_CENTER" prefWidth="300.0" style="-fx-background-color: white;" />
+         </ScrollPane>
+         <Label fx:id="cartInfoLabel" text="1 book, $14.00">
+            <VBox.margin>
+               <Insets bottom="2.0" />
+            </VBox.margin>
+         </Label>
+         <Button mnemonicParsing="false" onAction="#checkoutAction" text="Checkout" />
       </VBox>
    </left>
    <center>
       <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #dffddf;" BorderPane.alignment="CENTER">
          <top>
             <VBox alignment="CENTER" style="-fx-border-width: 0 0 1 0; -fx-border-color: black;" BorderPane.alignment="CENTER">
-               <children>
-                  <Label alignment="TOP_CENTER" text="Rent a Book">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets bottom="5.0" top="5.0" />
-                     </VBox.margin>
-                  </Label>
-               </children>
+               <Label alignment="TOP_CENTER" text="Rent a Book">
+                  <font>
+                     <Font size="18.0" />
+                  </font>
+                  <VBox.margin>
+                     <Insets bottom="5.0" top="5.0" />
+                  </VBox.margin>
+               </Label>
             </VBox>
          </top>
          <center>
             <VBox alignment="TOP_CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Label text="Choose a Subject">
-                     <VBox.margin>
-                        <Insets top="3.0" />
-                     </VBox.margin>
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="subjCB" prefWidth="100.0">
-                     <VBox.margin>
-                        <Insets bottom="5.0" top="3.0" />
-                     </VBox.margin>
-                  </ComboBox>
-                  <Button mnemonicParsing="false" onAction="#findAction" text="Find Books">
-                     <VBox.margin>
-                        <Insets bottom="3.0" />
-                     </VBox.margin>
-                  </Button>
-                  <ScrollPane hbarPolicy="NEVER" maxHeight="-Infinity" prefHeight="500.0" vbarPolicy="NEVER">
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                     <content>
-                        <VBox fx:id="rentBooksVBox" alignment="TOP_CENTER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="900.0" />
-                     </content>
-                  </ScrollPane>
-                  <Button mnemonicParsing="false" onAction="#cartAction" text="Add to Cart">
-                     <VBox.margin>
-                        <Insets top="5.0" />
-                     </VBox.margin>
-                  </Button>
-               </children>
+               <Label text="Choose a Subject">
+                  <VBox.margin>
+                     <Insets top="3.0" />
+                  </VBox.margin>
+                  <font>
+                     <Font size="15.0" />
+                  </font>
+               </Label>
+               <ComboBox fx:id="subjCB" onAction="#findAction" prefWidth="100.0">
+                  <VBox.margin>
+                     <Insets bottom="5.0" top="3.0" />
+                  </VBox.margin>
+               </ComboBox>
+               <ScrollPane hbarPolicy="NEVER" maxHeight="-Infinity" prefHeight="500.0" vbarPolicy="NEVER">
+                  <VBox.margin>
+                     <Insets top="10.0" />
+                  </VBox.margin>
+                  <VBox fx:id="rentBooksVBox" alignment="TOP_CENTER" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="900.0" />
+               </ScrollPane>
+               <Button mnemonicParsing="false" onAction="#cartAction" text="Add to Cart">
+                  <VBox.margin>
+                     <Insets top="5.0" />
+                  </VBox.margin>
+               </Button>
             </VBox>
          </center>
       </BorderPane>
    </center>
    <bottom>
       <VBox alignment="CENTER" style="-fx-border-color: black; -fx-border-width: 1 0 0 0;" BorderPane.alignment="CENTER">
-         <children>
-            <FlowPane alignment="CENTER" style="-fx-background-color: lightcyan;">
-               <children>
-                  <Button mnemonicParsing="false" onAction="#collectLockerAction" text="Collect Books">
-                     <FlowPane.margin>
-                        <Insets bottom="3.0" top="3.0" />
-                     </FlowPane.margin>
-                  </Button>
-               </children>
-            </FlowPane>
-            <AnchorPane style="-fx-border-color: black; -fx-border-width: 1 0 0 0;">
-               <children>
-                  <Label text="© NUS High School of Math and Science" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="3.0" AnchorPane.topAnchor="2.0" />
-                  <Hyperlink onAction="#aboutAction" text="About the Programmer..." AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="0.0" />
-               </children>
-            </AnchorPane>
-         </children>
+         <FlowPane alignment="CENTER" style="-fx-background-color: lightcyan;">
+            <Button mnemonicParsing="false" onAction="#collectLockerAction" text="Collect Books">
+               <FlowPane.margin>
+                  <Insets bottom="3.0" top="3.0" />
+               </FlowPane.margin>
+            </Button>
+         </FlowPane>
+         <AnchorPane style="-fx-border-color: black; -fx-border-width: 1 0 0 0;">
+            <Label text="© NUS High School of Math and Science" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="3.0" AnchorPane.topAnchor="2.0" />
+            <Hyperlink onAction="#aboutAction" text="About the Programmer..." AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="0.0" />
+         </AnchorPane>
       </VBox>
    </bottom>
 </BorderPane>
