--- a/src/airbooks/fxml/admin.fxml
+++ b/src/airbooks/fxml/admin.fxml
@@ -6,90 +6,101 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<BorderPane stylesheets="@../css/style.css" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.AdminController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: white;" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.AdminController">
    <top>
-      <GridPane style="-fx-background-color: lightcyan; -fx-border-width: 0 0 1 0; -fx-border-color: black;"
-                BorderPane.alignment="CENTER">
+      <GridPane style="-fx-background-color: lightcyan; -fx-border-width: 0 0 1 0; -fx-border-color: black;" BorderPane.alignment="CENTER">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
          <rowConstraints>
-            <RowConstraints vgrow="SOMETIMES"/>
+            <RowConstraints vgrow="SOMETIMES" />
          </rowConstraints>
          <Label text="AirBooks">
             <font>
-               <Font size="36.0"/>
+               <Font size="36.0" />
             </font>
             <GridPane.margin>
-               <Insets bottom="3.0" left="10.0" top="3.0"/>
+               <Insets bottom="3.0" left="10.0" top="3.0" />
             </GridPane.margin>
          </Label>
          <FlowPane alignment="CENTER_RIGHT" columnHalignment="RIGHT" GridPane.columnIndex="2">
             <GridPane.margin>
-               <Insets right="10.0"/>
+               <Insets right="10.0" />
             </GridPane.margin>
             <Label fx:id="accName" alignment="CENTER_RIGHT" text="admin">
                <font>
-                  <Font size="18.0"/>
+                  <Font size="18.0" />
                </font>
             </Label>
-            <ImageView fitHeight="35.0" fitWidth="100.0" onMouseClicked="#logoutAction" pickOnBounds="true"
-                       preserveRatio="true">
+            <ImageView fitHeight="35.0" fitWidth="100.0" onMouseClicked="#logoutAction" pickOnBounds="true" preserveRatio="true">
                <FlowPane.margin>
-                  <Insets left="5.0"/>
+                  <Insets left="5.0" />
                </FlowPane.margin>
-               <Image url="@logout.png"/>
+               <Image url="@logout.png" />
             </ImageView>
          </FlowPane>
       </GridPane>
    </top>
    <bottom>
-      <VBox alignment="CENTER" style="-fx-border-color: black; -fx-border-width: 1 0 0 0;"
-            BorderPane.alignment="CENTER">
-         <FlowPane alignment="CENTER" style="-fx-background-color: lightcyan;">
-            <Button mnemonicParsing="false" onAction="#ISBNSearchAction" text="Search by ISBN">
-               <FlowPane.margin>
-                  <Insets bottom="3.0" top="3.0"/>
-               </FlowPane.margin>
-            </Button>
-         </FlowPane>
+      <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <AnchorPane style="-fx-border-color: black; -fx-border-width: 1 0 0 0;">
-            <Label text="© NUS High School of Math and Science" AnchorPane.bottomAnchor="2.0"
-                   AnchorPane.leftAnchor="3.0" AnchorPane.topAnchor="2.0"/>
-            <Hyperlink onAction="#aboutAction" text="About the Programmer..." AnchorPane.bottomAnchor="0.0"
-                       AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="0.0"/>
+            <Label text="© NUS High School of Math and Science" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="3.0" AnchorPane.topAnchor="2.0" />
+            <Hyperlink onAction="#aboutAction" text="About the Programmer..." AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="0.0" />
          </AnchorPane>
       </VBox>
    </bottom>
    <center>
-      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #dffddf;"
-            BorderPane.alignment="CENTER">
+      <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #dffddf;" BorderPane.alignment="CENTER">
          <Label alignment="TOP_CENTER" text="Books">
             <font>
-               <Font size="18.0"/>
+               <Font size="18.0" />
             </font>
             <VBox.margin>
-               <Insets bottom="5.0" top="5.0"/>
+               <Insets bottom="5.0" top="5.0" />
             </VBox.margin>
          </Label>
-         <ScrollPane hbarPolicy="NEVER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="500.0"
-                     vbarPolicy="NEVER">
+         <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity">
+            <children>
+               <FlowPane alignment="CENTER" style="-fx-border-color: black; -fx-border-width: 1 1 0 1;">
+                  <children>
+                     <Label text="Enter ISBN/Title:">
+                        <FlowPane.margin>
+                           <Insets right="5.0" />
+                        </FlowPane.margin>
+                     </Label>
+                     <TextField fx:id="searchTF" onKeyTyped="#searchAction">
+                        <FlowPane.margin>
+                           <Insets left="5.0" />
+                        </FlowPane.margin>
+                     </TextField>
+                  </children>
+                  <padding>
+                     <Insets bottom="5.0" top="5.0" />
+                  </padding>
+               </FlowPane>
+               <ScrollPane hbarPolicy="NEVER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="500.0" vbarPolicy="NEVER">
+                  <VBox.margin>
+                     <Insets />
+                  </VBox.margin>
+                  <VBox fx:id="bookViewVBox" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="900.0">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </VBox>
+               </ScrollPane>
+            </children>
             <VBox.margin>
-               <Insets left="15.0" right="15.0" top="10.0"/>
+               <Insets left="15.0" right="15.0" />
             </VBox.margin>
-            <VBox fx:id="bookViewVBox" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="900.0">
-               <opaqueInsets>
-                  <Insets/>
-               </opaqueInsets>
-            </VBox>
-         </ScrollPane>
+         </VBox>
          <Label fx:id="bookTotalLabel" text="2 books in total">
             <VBox.margin>
-               <Insets top="5.0"/>
+               <Insets bottom="5.0" top="5.0" />
             </VBox.margin>
          </Label>
+         <Button fx:id="returnBookButton" mnemonicParsing="false" onAction="#returnBookAction" text="Return Book" />
       </VBox>
    </center>
 </BorderPane>
