--- a/src/airbooks/view/login.fxml
+++ b/src/airbooks/view/login.fxml
@@ -6,14 +6,14 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<BorderPane maxHeight="-Infinity" stylesheets="@../css/style.css" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.LoginController">
+<BorderPane maxHeight="-Infinity" stylesheets="@style.css" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.LoginController">
    <top>
       <ImageView fitHeight="153.0" fitWidth="261.0" pickOnBounds="true" preserveRatio="true"
                  BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets bottom="5.0" top="5.0"/>
          </BorderPane.margin>
-         <Image url="@airbooks-logo.png"/>
+         <Image url="@../resources/img/airbooks-logo.png"/>
       </ImageView>
    </top>
    <center>
