--- a/src/airbooks/view/student.fxml
+++ b/src/airbooks/view/student.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: white;" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.StudentController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: white;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbooks.controller.StudentController">
    <top>
       <GridPane style="-fx-background-color: lightcyan; -fx-border-width: 0 0 1 0; -fx-border-color: black;" BorderPane.alignment="CENTER">
          <columnConstraints>
@@ -38,7 +38,7 @@
                <FlowPane.margin>
                   <Insets left="5.0" />
                </FlowPane.margin>
-               <Image url="@logout.png" />
+               <Image url="@../resources/img/logout.png" />
             </ImageView>
          </FlowPane>
          <Label fx:id="walletLabel" alignment="CENTER" text="\$25.00" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
